{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 249,
  "lineage": "7153b846-f145-8bf8-7f8e-7d9ecaecdc3b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_from_gke",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T07:53:48.225-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tough-artwork-368615/global/firewalls/allow-trafic-from-gke",
            "log_config": [],
            "name": "allow-trafic-from-gke",
            "network": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main",
            "priority": 1000,
            "project": "tough-artwork-368615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/firewalls/allow-trafic-from-gke",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-gke-trafic"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-14T07:53:48.325-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tough-artwork-368615/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main",
            "priority": 1000,
            "project": "tough-artwork-368615",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220927",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/zones/us-east1-b/disks/mongodb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tough-artwork-368615/zones/us-east1-b/instances/mongodb",
            "instance_id": "23440087851194998",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "CzxQIf7bAUM=",
            "metadata_startup_script": "#!/usr/bin/bash\nsudo apt-get update\nsudo apt-get install wget -y\nwget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -\necho \"deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/6.0 multiverse\" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list\nsudo apt-get update -y;\nsudo apt-get install -y mongodb-org\necho \"mongodb-org hold\" | sudo dpkg --set-selections\necho \"mongodb-org-database hol [...]
            "name": "mongodb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.23.202.168",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/regions/us-east1/subnetworks/mongo-ip-range",
                "subnetwork_project": "tough-artwork-368615"
              }
            ],
            "project": "tough-artwork-368615",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/zones/us-east1-b/instances/mongodb",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-gke-trafic",
              "allow-ssh"
            ],
            "tags_fingerprint": "uUUZ6CenOKA=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.private_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/tough-artwork-368615/global/networks/main",
            "mtu": 1500,
            "name": "main",
            "project": "tough-artwork-368615",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "gke-ip-range",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T07:53:48.927-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/tough-artwork-368615/regions/us-east1/subnetworks/gke-ip-range",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "gke-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tough-artwork-368615",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/regions/us-east1/subnetworks/gke-ip-range",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        },
        {
          "index_key": "mongo-ip-range",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-14T07:53:49.682-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/tough-artwork-368615/regions/us-east1/subnetworks/mongo-ip-range",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "mongo-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tough-artwork-368615",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tough-artwork-368615/regions/us-east1/subnetworks/mongo-ip-range",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}